EM boundary check

--- a/Code/Mannela.ipynb
+++ b/Code/Mannela.ipynb
@@ -28,6 +28,7 @@
     "            tn += dt\n",
     "            Xn = Xn_1\n",
     "        t_exit.append(tn-0.5*dt) #This line could be changed.\n",
+    "        \n",
     "    a_M = np.mean(t_exit)\n",
     "    print('Break count ={}'.format(breaked))\n",
     "    b2_M = 1/(M-1) * np.sum((t_exit-a_M)**2)\n",
@@ -50,118 +51,8 @@
     "    \n",
     "    \n",
     "    \n",
-    "def P_hit(Xn,Xn_1,dt,bound,D, df):\n",
-    "    return np.exp(-df(bound)/(2*D*(np.exp(2*dt*df(bound))-1))*(Xn_1-bound+(Xn-bound)*np.exp(dt*df(bound))-f(bound)/df(bound))**2 + (bound - (Xn + dt*(f(Xn)+f(Xn_1))/2))**2/4*D*dt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_MHT(self, X0, dt, f, g, df, num_itr, lower_b=None, upper_b=None):\n",
-    "        if lower_b is None and upper_b is None:\n",
-    "            assert(\"Please provide a boundary value\")  \n",
-    "        if lower_a is None:\n",
-    "            lower_a = -np.inf\n",
-    "        if uuper_b is None:\n",
-    "            lower_b = np.inf\n",
-    "            \n",
-    "        t_exit = []\n",
-    "        \n",
-    "        for i in range(num_itr):\n",
-    "            self.breaked = 0 \n",
-    "            tn = 0\n",
-    "            Xn = X0\n",
-    "            while Xn > lower_b and Xn < upper_b:\n",
-    "                Rn = np.random.randn(1)\n",
-    "                Xn_1 = Xt + dt*f(Xt) + np.sqrt(dt)*Rn*g(Xt)\n",
-    "                D = (g(Xt)**2)/2\n",
-    "                if Xn-a<self.thres_coeff*dt or b-Xn<self.thres_coeff*dt:\n",
-    "                    prob = self.P_hit(Xn,Xn_1,dt,a,D, df)\n",
-    "                    if prob>np.random.uniform(0,1) or prob>np.random.uniform(0,1):\n",
-    "                        self.breaked += 1\n",
-    "                        break\n",
-    "                        \n",
-    "                tn += dt\n",
-    "                Xn = Xn_1\n",
-    "        \n",
-    "        tmean = np.mean(t_exit)\n",
-    "        tstd = np.std(t_exit)\n",
-    "\n",
-    "        cileft = tmean - 1.96*tstd/np.sqrt(npaths)\n",
-    "        ciright = tmean + 1.96*tstd/np.sqrt(npaths)\n",
-    "        \n",
-    "        return tmean, tstd, cileft, ciright\n",
-    "    \n",
-    "    def plot(self,t_exit):\n",
-    "        histogram,bins = np.histogram(t_exit,bins=20,range=[0,20])\n",
-    "        midx = (bins[0:-1]+bins[1:])/2\n",
-    "        plt.bar(midx,histogram,label='Test')\n",
-    "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ExponentialTimestepping:\n",
-    "    def __init__(self, rate):\n",
-    "        self.rate = rate\n",
-    "    \n",
-    "    def F(self, Xt, f, g):\n",
-    "        return f(Xt) / g(Xt)**2\n",
-    "        \n",
-    "    def N(self, Xt, g):\n",
-    "        return np.sqrt((2*self.rate / g(Xt)**2) + self.F(Xt)**2)\n",
-    "    \n",
-    "    \n",
-    "    def compute_MHT(self, X0, dt, f, g , num_itr, lower_b=None, upper_b=None):\n",
-    "        if lower_b is None and upper_b is None:\n",
-    "            assert(\"Please provide a boundary value\")  \n",
-    "        if lower_a is None:\n",
-    "            lower_a = -np.inf\n",
-    "        if uuper_b is None:\n",
-    "            lower_b = np.inf\n",
-    "            \n",
-    "        t_exit = []\n",
-    "        \n",
-    "        for i in range(num_itr):\n",
-    "            self.breaked = 0 \n",
-    "            tn = 0\n",
-    "            Xn = X0\n",
-    "            while Xn > lower_b and Xn < upper_b:\n",
-    "                v = np.random.uniform()\n",
-    "                p = -log(v)\n",
-    "                u = np.random.uniform()\n",
-    "                sign = np.sign(0.5 * (1 + self.F(Xt)/self.N(Xt)) - u)\n",
-    "                Xt_1 = Xt + (sign*p)/(self.N(Xt)-sign*self.F(Xt))\n",
-    "                \n",
-    "                w = np.random.uniform()\n",
-    "                if Xnew < lower_b or w < np.exp(-2*self.N(b-max(Xt, Xnew))) or Xnew > upper_b or w < np.exp(-2*self.N(min(Xt, Xnew)-b)):\n",
-    "                    self.breaked += 1\n",
-    "                    break\n",
-    "                    \n",
-    "                tn += dt\n",
-    "                Xn = Xn_1\n",
-    "        \n",
-    "        tmean = np.mean(t_exit)\n",
-    "        tstd = np.std(t_exit)\n",
-    "\n",
-    "        cileft = tmean - 1.96*tstd/np.sqrt(npaths)\n",
-    "        ciright = tmean + 1.96*tstd/np.sqrt(npaths)\n",
-    "        \n",
-    "        return tmean, tstd, cileft, ciright\n",
-    "    \n",
-    "    def plot(self,t_exit):\n",
-    "        histogram,bins = np.histogram(t_exit,bins=20,range=[0,20])\n",
-    "        midx = (bins[0:-1]+bins[1:])/2\n",
-    "        plt.bar(midx,histogram,label='Test')\n",
-    "        plt.show()\n",
-    "    "
+    "def P_hit(x0,xh,dt,xb,D):\n",
+    "    return np.exp(-f_dash(xb)/(2*D*(np.exp(2*dt*f_dash(xb))-1))*(xh-xb+(x0-xb)*np.exp(dt*f_dash(xb))-f(xb)/f_dash(xb))**2 + (xb - (x0 + dt*(f(x0)+f(xh))/2))**2/4*D*dt)"
    ]
   }
  ],
