--- a/Code/Implementations.ipynb
+++ b/Code/Implementations.ipynb
@@ -534,7 +534,7 @@
     "    def P_hit(self, x0,xh,dt,xb,D, f_dash, f):\n",
     "        return np.exp(-f_dash(xb)/(2*D*(np.exp(2*dt*f_dash(xb))-1))*(xh-xb+(x0-xb)*np.exp(dt*f_dash(xb))-f(xb)/f_dash(xb))**2 + (xb - (x0 + dt*(f(x0)+f(xh))/2))**2/4*D*dt)\n",
     "    \n",
-    "    def compute_MHT(self, X0, dt, f, g, df, num_itr, lower_b=None, upper_b=None):\n",
+    "    def compute_MHT_EM(self, X0, dt, f, g, df, num_itr, lower_b=None, upper_b=None):\n",
     "        if lower_b is None and upper_b is None:\n",
     "            assert(\"Please provide a boundary value\")  \n",
     "        if lower_b is None:\n",
@@ -1316,7 +1316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timesteps = np.linspace(0.001, 0.1, 10)    "
+    "timesteps = np.linspace(0.001, 0.01, 10)    "
    ]
   },
   {
