--- a/Code/Experiments/Experiments.ipynb
+++ b/Code/Experiments/Experiments.ipynb
@@ -14,7 +14,9 @@
    "outputs": [],
    "source": [
     "import Methods as M\n",
-    "import SDEs as S"
+    "import SDEs as S\n",
+    "import pickle\n",
+    "import numpy as np"
    ]
   },
   {
@@ -30,12 +32,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_itr = 10000\n",
+    "# num_itr = 500000 # Number of iteration\n",
+    "num_itr = 50 # Number of iteration\n",
+    "\n",
+    "# timesteps = np.arange(0.001, 1, 0.01) # Values for dt\n",
+    "timesteps = np.arange(0.01, 0.1, 0.05) # Values for dt\n",
+    "\n",
+    "# Instance of Simple SDE\n",
+    "'''\n",
     "SDE = S.SimpleSDE(mu=0.5, sigma=0.1)\n",
     "a = None\n",
     "b = 5\n",
-    "dt = 2\n",
     "X0 = 0\n",
+    "'''\n",
+    "\n",
+    "# Instance of Custom SDE - The SDE used in Mannella's paper\n",
+    "SDE = S.CustomSDE()\n",
+    "a = None\n",
+    "b = -0.5\n",
+    "X0 = -1\n",
     "\n",
     "f = SDE.f\n",
     "g = SDE.g\n",
@@ -56,7 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EM = M.EM_Milstein()"
+    "EM = M.EM_Milstein()\n",
+    "AT = M.AdaptiveTimestep()\n",
+    "EM_BC = M.EulerMaryamaBoundaryCheck()"
    ]
   },
   {
@@ -68,36 +85,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:00<00:00, 51626.46it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----Euler Method-----\n",
-      "Mean:10.003, std:1.008757156108446, Confidence Interval: (9.983228359740275,10.022771640259725)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 50/50 [00:00<00:00, 88.98it/s]\n",
+      "100%|██████████| 50/50 [00:00<00:00, 312.92it/s]\n"
      ]
     }
    ],
    "source": [
-    "t_exit,steps_exit, tmean, tstd, cileft, ciright ,steps_mean, steps_std, steps_cileft, steps_ciright = EM.compute_MHT_EM(X0=X0,dt=dt,num_itr=num_itr, f=f, g=g, lower_b=a,upper_b=b)\n",
-    "print('-----Euler Method-----')\n",
-    "print('Mean:{}, std:{}, Confidence Interval: ({},{})'.format(tmean, tstd, cileft, ciright))"
+    "t_exits = []\n",
+    "steps_exits = []\n",
+    "for dt in timesteps:\n",
+    "    t_exit,steps_exit = EM_BC.compute_MHT_EM(X0=X0,dt=dt,num_itr=num_itr, f=f, g=g,df=df, a=a,b=b)\n",
+    "    t_exits.append(t_exit)\n",
+    "    steps_exits.append(steps_exit)\n",
+    "\n",
+    "# Replace None with the values when using Adaptive Timesteps\n",
+    "paths = None # AT.paths\n",
+    "times = None # AT.times\n",
+    "ts = None    # AT.timesteps\n",
+    "results_dic = {'SDE':'SimpleSDE', 'Method':'EM', 'timesteps':timesteps,\n",
+    "               't_exits':t_exits, 'steps_exits':steps_exits,\n",
+    "              'AT_paths':paths, 'AT_time':times, 'AT_timesteps':ts}\n",
+    "\n",
+    "file_name = results_dic['SDE'] + '_' + results_dic['Method'] + '.pickle'\n",
+    "with open('./Results/'+file_name, 'wb') as f:\n",
+    "    pickle.dump(results_dic, f)"
    ]
   },
   {
@@ -106,6 +126,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nwith open('./Results/SimpleSDE_EM.pickle', 'rb') as handle:\\n    res = pickle.load(handle)\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To load results, use the following command. \n",
+    "'''\n",
+    "with open('./Results/SimpleSDE_EM.pickle', 'rb') as handle:\n",
+    "    res = pickle.load(handle)\n",
+    "''' "
+   ]
   }
  ],
  "metadata": {
