add derivatives and potentials function to SDEs

--- a/Code/Experiments/Experiments.ipynb
+++ b/Code/Experiments/Experiments.ipynb
@@ -55,7 +55,10 @@
     "f = SDE.f\n",
     "g = SDE.g\n",
     "dg = SDE.dg\n",
-    "df = SDE.df"
+    "df = SDE.df\n",
+    "# V is potential function and only CustomSDE, DoubleWellPotential and PoliticalPoll have V\n",
+    "# V is required for exponentialV-timestepping method\n",
+    "# V = SDE.V"
    ]
   },
   {
@@ -122,10 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.848000000000002"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(results_dic['t_exits'][0])"
+   ]
   },
   {
    "cell_type": "code",
