--- a/Code/Experiments/Experiments.ipynb
+++ b/Code/Experiments/Experiments.ipynb
@@ -32,11 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_itr = 500000 # Number of iteration\n",
-    "num_itr = 50 # Number of iteration\n",
+    "num_itr = 500000 # Number of iteration\n",
+    "timesteps = np.arange(0.001, 1, 0.01) # Values for dt\n",
     "\n",
-    "# timesteps = np.arange(0.001, 1, 0.01) # Values for dt\n",
-    "timesteps = np.arange(0.01, 0.1, 0.05) # Values for dt\n",
     "\n",
     "# Instance of Simple SDE\n",
     "'''\n",
@@ -47,15 +45,18 @@
     "'''\n",
     "\n",
     "# Instance of Custom SDE - The SDE used in Mannella's paper\n",
+    "'''\n",
     "SDE = S.CustomSDE()\n",
     "a = None\n",
     "b = -0.5\n",
     "X0 = -1\n",
+    "'''\n",
     "\n",
     "f = SDE.f\n",
     "g = SDE.g\n",
     "dg = SDE.dg\n",
     "df = SDE.df\n",
+    "\n",
     "# V is potential function and only CustomSDE, DoubleWellPotential and PoliticalPoll have V\n",
     "# V is required for exponentialV-timestepping method\n",
     "# V = SDE.V"
@@ -76,7 +77,9 @@
    "source": [
     "EM = M.EM_Milstein()\n",
     "AT = M.AdaptiveTimestep()\n",
-    "EM_BC = M.EulerMaryamaBoundaryCheck()"
+    "EM_BC = M.EulerMaryamaBoundaryCheck()\n",
+    "EXPV = M.ExponentialVTimestepping(rate=0.1) # rate=exponential distr. rate\n",
+    "EXP = M.ExponentialTimestepping(rate=0.1) # rate=exponential distr. rate"
    ]
   },
   {
@@ -97,8 +100,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:00<00:00, 88.98it/s]\n",
-      "100%|██████████| 50/50 [00:00<00:00, 312.92it/s]\n"
+      "100%|██████████| 5000/5000 [00:00<00:00, 19487.74it/s]\n",
+      "100%|██████████| 5000/5000 [00:00<00:00, 21439.68it/s]\n"
      ]
     }
    ],
@@ -106,7 +109,7 @@
     "t_exits = []\n",
     "steps_exits = []\n",
     "for dt in timesteps:\n",
-    "    t_exit,steps_exit = EM_BC.compute_MHT_EM(X0=X0,dt=dt,num_itr=num_itr, f=f, g=g,df=df, a=a,b=b)\n",
+    "    t_exit,steps_exit = EXP.compute_MHT_EM(X0=X0,dt=dt,num_itr=num_itr, f=f, g=g, a=a,b=b)\n",
     "    t_exits.append(t_exit)\n",
     "    steps_exits.append(steps_exit)\n",
     "\n",
@@ -121,26 +124,6 @@
     "file_name = results_dic['SDE'] + '_' + results_dic['Method'] + '.pickle'\n",
     "with open('./Results/'+file_name, 'wb') as f:\n",
     "    pickle.dump(results_dic, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.848000000000002"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(results_dic['t_exits'][0])"
    ]
   },
   {
