--- a/Code/Experiments/Experiments.ipynb
+++ b/Code/Experiments/Experiments.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import Methods as M\n",
     "import SDEs as S\n",
     "import pickle\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -28,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_itr = 500000 # Number of iteration\n",
+    "num_itr = 100000 # Number of iteration\n",
     "timesteps = np.arange(0.001, 1, 0.01) # Values for dt\n",
     "\n",
     "\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,20 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5000/5000 [00:00<00:00, 19487.74it/s]\n",
-      "100%|██████████| 5000/5000 [00:00<00:00, 21439.68it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t_exits = []\n",
     "steps_exits = []\n",
@@ -116,32 +108,40 @@
     "# Replace None with the values when using Adaptive Timesteps\n",
     "paths = None # AT.paths\n",
     "times = None # AT.times\n",
-    "ts = None    # AT.timesteps\n",
+    "ts = None    # AT.timesteps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Store Results "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "results_dic = {'SDE':'SimpleSDE', 'Method':'EM', 'timesteps':timesteps,\n",
     "               't_exits':t_exits, 'steps_exits':steps_exits,\n",
     "              'AT_paths':paths, 'AT_time':times, 'AT_timesteps':ts}\n",
     "\n",
-    "file_name = results_dic['SDE'] + '_' + results_dic['Method'] + '.pickle'\n",
-    "with open('./Results/'+file_name, 'wb') as f:\n",
+    "file_name = './Results/' + results_dic['SDE'] + '_' + results_dic['Method'] + '.pickle'\n",
+    "if os.path.exists(file_name):\n",
+    "    raise Exception('WARNING-The file already exist-WARNING')\n",
+    "\n",
+    "\n",
+    "with open(file_name, 'wb') as f:\n",
     "    pickle.dump(results_dic, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nwith open('./Results/SimpleSDE_EM.pickle', 'rb') as handle:\\n    res = pickle.load(handle)\\n\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load results, use the following command. \n",
     "'''\n",
