change exp methods

--- a/Code/Experiments/Experiments.ipynb
+++ b/Code/Experiments/Experiments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_itr = 100000 # Number of iteration\n",
-    "timesteps = np.arange(0.001, 1, 0.01) # Values for dt\n",
+    "timesteps = np.logspace(-3, 0, 19) # Values for dt\n",
     "\n",
     "\n",
     "# Instance of Simple SDE\n",
@@ -46,12 +46,12 @@
     "'''\n",
     "\n",
     "# Instance of Custom SDE - The SDE used in Mannella's paper\n",
-    "'''\n",
+    "\n",
     "SDE = S.CustomSDE()\n",
     "a = None\n",
     "b = -0.5\n",
     "X0 = -1\n",
-    "'''\n",
+    "\n",
     "\n",
     "f = SDE.f\n",
     "g = SDE.g\n",
@@ -60,7 +60,7 @@
     "\n",
     "# V is potential function and only CustomSDE, DoubleWellPotential and PoliticalPoll have V\n",
     "# V is required for exponentialV-timestepping method\n",
-    "# V = SDE.V"
+    "V = SDE.V"
    ]
   },
   {
@@ -79,8 +79,8 @@
     "EM = M.EM_Milstein()\n",
     "AT = M.AdaptiveTimestep()\n",
     "EM_BC = M.EulerMaryamaBoundaryCheck()\n",
-    "EXPV = M.ExponentialVTimestepping(rate=0.1) # rate=exponential distr. rate\n",
-    "EXP = M.ExponentialTimestepping(rate=0.1) # rate=exponential distr. rate"
+    "EXPV = M.ExponentialVTimestepping()\n",
+    "EXP = M.ExponentialTimestepping() "
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Store Results "
+    "## Store Results (Change values of SDE and Methods)"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "\n",
     "file_name = './Results/' + results_dic['SDE'] + '_' + results_dic['Method'] + '.pickle'\n",
     "if os.path.exists(file_name):\n",
-    "    raise Exception('WARNING-The file already exist-WARNING')\n",
+    "    raise Exception('WARNING-The file already exist - Change values of SDE and Methods -WARNING')\n",
     "\n",
     "\n",
     "with open(file_name, 'wb') as f:\n",
