add adaptive Misltein methods

--- a/Code/Experiments/Experiments_Sinyoung_EpidemicModel.ipynb
+++ b/Code/Experiments/Experiments_Sinyoung_EpidemicModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_itr = 100000 # Number of iteration\n",
     "timesteps = np.logspace(-3, 0, 19) # Values for dt\n",
+    "\n",
+    "num_itr = 1000 # Number of iteration\n",
+    "timesteps = [0.01,0.1] # Values for dt\n",
     "\n",
     "\n",
     "\n",
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +73,12 @@
     "EM_BC = M.EulerMaryamaBoundaryCheck() # Mannella\n",
     "EXPV = M.ExponentialVTimestepping() # ExponentialV\n",
     "EXP = M.ExponentialTimestepping()  # Exponential \n",
+    "AT = M.AdaptiveTimestep()\n",
     "\n",
     "methods_dict = {'EM':EM_Mils.compute_MHT_EM,\n",
-    "                'Milstein':EM_Mils.compute_MHT_Milstein}"
+    "                'Milstein':EM_Mils.compute_MHT_Milstein,\n",
+    "                'AT_EM':AT.compute_MHT_EM,\n",
+    "                'AT_Mils': AT.compute_MHT_Milstein}"
    ]
   },
   {
@@ -99,9 +105,10 @@
     "        t_exits.append(t_exit)\n",
     "        steps_exits.append(steps_exit)\n",
     "    \n",
-    "    paths = AT.paths if method=='AT' else None\n",
-    "    times = AT.times if method=='AT' else None\n",
-    "    ts = AT.timesteps if method=='AT' else None\n",
+    "#     paths = AT.paths if method=='AT' else None\n",
+    "#     times = AT.times if method=='AT' else None\n",
+    "#     ts = AT.timesteps if method=='AT' else None\n",
+    "    paths, times, ts = None, None, None\n",
     "    \n",
     "    results_dic = {'SDE':'Epidemic', 'Method':method, 'timesteps':timesteps,\n",
     "               't_exits':t_exits, 'steps_exits':steps_exits,\n",
@@ -123,10 +130,18 @@
    "outputs": [],
    "source": [
     "# To load results, use the following command. \n",
-    "'''\n",
-    "with open('./Results/Epidemic_Milstein.pickle', 'rb') as handle:\n",
-    "    res = pickle.load(handle)\n",
-    "'''"
+    "\n",
+    "with open('./Results/Epidemic_AT_EM.pickle', 'rb') as handle:\n",
+    "    res = pickle.load(handle)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(res['t_exits'][1])"
    ]
   },
   {
