add adaptive Misltein methods

--- a/Code/Experiments/Experiments_Sinyoung_EpidemicModel.ipynb
+++ b/Code/Experiments/Experiments_Sinyoung_EpidemicModel.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -125,23 +125,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# To load results, use the following command. \n",
     "\n",
-    "with open('./Results/Epidemic_AT_EM.pickle', 'rb') as handle:\n",
+    "with open('./Results/Epidemic_AT_Mils.pickle', 'rb') as handle:\n",
     "    res = pickle.load(handle)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015790299828655343"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.mean(res['t_exits'][1])"
+    "np.mean(res['t_exits'][0])"
    ]
   },
   {
